--- a/App/index.html
+++ b/App/index.html
@@ -17,11 +17,11 @@
 		
 		<ul id="main_nav">
 
-			<li><a href="index_1.html">HOME</a></li>
+			<li><a href="">HOME</a></li>
 			<li><a href="">FORUMS</a></li>
 			<li><a href="">SERVICES</a></li>
 			<li><a href="">CONTACTS</a></li>
-			<li><a href="project.html">PROJECTS</a></li>
+			<li><a href="">PROJECTS</a></li>
 		</ul>
 		
 
